--- a/DevFramework/DevFramework.Northwind.Entities/DevFramework.Northwind.Entities.csproj
+++ b/DevFramework/DevFramework.Northwind.Entities/DevFramework.Northwind.Entities.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ComplexTypes\ProductDetail.cs" />
     <Compile Include="Concrete\Category.cs" />
     <Compile Include="Concrete\Product.cs" />
+    <Compile Include="Concrete\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
